UUID type for order_id, use Address object